[gd_scene load_steps=14 format=3 uid="uid://s72wdioqf6ex"]

[ext_resource type="Script" path="res://Game.gd" id="1_nyoxe"]
[ext_resource type="Texture2D" uid="uid://b4h2wu2fy14ea" path="res://assets/img/bg.png" id="2_m2egp"]
[ext_resource type="AudioStream" uid="uid://c16q2x6fotuy6" path="res://assets/sfx/002_we-lost.wav" id="2_tue24"]
[ext_resource type="PackedScene" uid="uid://4ctek65x6jqg" path="res://components/AudioStreamShuffler2D/AudioStreamShuffler2D.tscn" id="3_00rtt"]
[ext_resource type="PackedScene" uid="uid://dxuxsyx0vecs" path="res://scenes/Ball/Ball.tscn" id="3_wu7tn"]
[ext_resource type="AudioStream" uid="uid://c7odbvq5h5jbl" path="res://assets/sfx/001_we-lost.wav" id="4_xur0g"]
[ext_resource type="AudioStream" uid="uid://bcyh6q0p4mwlm" path="res://assets/sfx/003_we-lost.wav" id="5_xrql1"]
[ext_resource type="PackedScene" uid="uid://dn06rh6wkybon" path="res://scenes/CatPaw/CatPaw.tscn" id="8_6mrk6"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_k013m"]
friction = 0.66
bounce = 0.75

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6evtj"]
size = Vector2(1396, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ywyg"]
size = Vector2(1396, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2krv"]
size = Vector2(1396, 11)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_f1m5h"]

[node name="Game" type="Node2D"]
script = ExtResource("1_nyoxe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m2egp")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HighScore" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.729412, 0.85098, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0588235, 0.266667, 0.796078, 1)
theme_override_font_sizes/font_size = 32
text = "Highscore 0"

[node name="Score" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.729412, 0.85098, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0588235, 0.266667, 0.796078, 1)
theme_override_font_sizes/font_size = 32
text = "Score"

[node name="Anchor" type="Control" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Start" type="Button" parent="CanvasLayer/MarginContainer/Anchor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -18.0
offset_right = 94.5
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(0.729412, 0.85098, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0588235, 0.266667, 0.796078, 1)
theme_override_colors/font_hover_color = Color(0.0588235, 0.266667, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.0588235, 0.266667, 0.796078, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Start"
flat = true

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Credits" type="Label" parent="CanvasLayer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -14.0
offset_right = 90.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.729412, 0.85098, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0588235, 0.266667, 0.796078, 1)
theme_override_font_sizes/font_size = 32
text = "Dev by Kumi
Art by Yuyu"

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(637, 193)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Ball" parent="." instance=ExtResource("3_wu7tn")]
position = Vector2(637, 193)
input_pickable = false

[node name="AudioListener2D" type="AudioListener2D" parent="Ball"]
current = true

[node name="Bounds" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_k013m")

[node name="Top" type="CollisionShape2D" parent="Bounds"]
position = Vector2(630, -4)
shape = SubResource("RectangleShape2D_6evtj")
disabled = true

[node name="Bottom" type="CollisionShape2D" parent="Bounds"]
position = Vector2(608, 715)
shape = SubResource("RectangleShape2D_6ywyg")
disabled = true

[node name="Left" type="CollisionShape2D" parent="Bounds"]
position = Vector2(-2, 299)
rotation = 1.5708
shape = SubResource("RectangleShape2D_i2krv")

[node name="Right" type="CollisionShape2D" parent="Bounds"]
position = Vector2(1278, 327)
rotation = 1.5708
shape = SubResource("RectangleShape2D_i2krv")

[node name="GameOverRegion" type="Area2D" parent="."]
visible = false
position = Vector2(640, 880)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverRegion"]
shape = SubResource("WorldBoundaryShape2D_f1m5h")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]

[node name="VoiceOver" parent="." instance=ExtResource("3_00rtt")]
streams = Array[AudioStream]([ExtResource("4_xur0g"), ExtResource("2_tue24"), ExtResource("5_xrql1")])

[node name="CatPaw" parent="." instance=ExtResource("8_6mrk6")]
visible = false
